Added activities for the view and modify quiz/question Added quiz and question row for the recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,8 @@
     <string name="plus">+</string>
     <string name="minus">-</string>
     <string name="number">XX</string>
+    <string name="newQuiz">New Quiz</string>
+    <string name="questionNumber">Question #</string>
 
 
 </resources>
